$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-17 (opened November 17, 2010)

	* predict.procrustes: gained 'truemean' so that new points can be
	added to the plot.procrustes() graph.

	* alpha release version: preparing release (1.17-5) of
	vegan. Mainly clean up and checking of functions intended for the
	release. 

	* mantel.correlog: vegan mantel() was used standard order
	statistics or (hits+1)/(nperm+1) since May 2009, but
	mantel.correlog() did not notice the change and still tried to
	correct the mantel() result.

	* as.mlm.cca/rda and intersector: should get the pivoting of names
	in qr.X() correct both in the current buggy R and hopefully fixed
	next version 2.12.1.

	* vif.cca: aliased terms must be removed when calculating
	VIFs. Test case vif.cca(cca(dune ~ Manure + Management, dune.env))
	should give decent values all below <100 (used to give magnitude
	10^31). VIF of aliased terms is NA. Pierre Legendre noticed this.

	* print.eigenvals uses zapsmall.
	
Version 1.18-16 (closed November 17, 2010)

	* procrustes: fixed centring of fitted(). Added predict() method
	that can be used to add new rotated coordinates to the target. The
	function cannot be used for symmetric analysis with 'newdata'.

	* vignette on design decision: updated to changes in 'const' in
	scores.rda()  in 1.18-15 and to Canoco 4. Explains now 'const'
	more thoroughly.

	* pcnm: gained argument 'dist.ret' to return the distance matrix
	on which PCNMs were based.

	* cca/rda/capscale: JO yielded to the pressure, and added
	proportions of inertia components in the printed output.

	* capscale: failed with na.action -- fix in ordiParseFormula().
	na.action was introduced in rev1002 (Sept 11, 2009), and then
	ruined with a change in ordiParseFormula() in rev1007 (Sept 15,
	2009) so it lived four days and was broken when released. The
	problem was reported by Nevil Amos.

	* SSgleason: a new SS-species-area-model.
