@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-17 (opened November 17, 2010)
 
+	* prc: got back the formula interface and with that the na.action
+	lost in r1356 (9 Nov, 2010).
+
 	* predict.procrustes: gained 'truemean' so that new points can be
 	added to the plot.procrustes() graph.
 
